Don't replace Line feed code

--- a/tools/.gitconfig
+++ b/tools/.gitconfig
@@ -13,4 +13,4 @@
 	list = log --pretty=format:\"<%h> %ad [%an] %Cgreen%d%Creset %s\" --date=short
 	df = diff
 [core]
-	autocrlf = true
+	autoCRLF = false
