--- a/tools/.gitconfig
+++ b/tools/.gitconfig
@@ -1,16 +1,17 @@
+[include]
+    path = .gitconfig.local
 [user]
-	name = budougumi0617
-	email = budougumi0617@gmail.com
+    name = budougumi0617
+    email = budougumi0617@gmail.com
 [color]
-	ui = auto
+    ui = auto
 [alias]
-[alias]
-	br = branch
-	co = checkout
-	ci = commit
-	st = status
-	graph = log --graph --date-order -C -M --pretty=format:\"<%h> %ad [%an] %Cgreen%d%Creset %s\" --all --date=short
-	list = log --pretty=format:\"<%h> %ad [%an] %Cgreen%d%Creset %s\" --date=short
-	df = diff
+    br = branch
+    co = checkout
+    ci = commit
+    st = status
+    graph = log --graph --date-order -C -M --pretty=format:\"<%h> %ad [%an] %Cgreen%d%Creset %s\" --all --date=short
+    list = log --pretty=format:\"<%h> %ad [%an] %Cgreen%d%Creset %s\" --date=short
+    df = diff
 [core]
-	autoCRLF = false
+    autoCRLF = false
